--- a/_includes/sns-badges.html
+++ b/_includes/sns-badges.html
@@ -2,5 +2,5 @@
 <div class="sns-badges">
   <a class="twitter-share-button" href="https://twitter.com/share" data-via="vim_jp" data-lang="ja">ツイート</a>
   <a class="hatena-bookmark-button" href="http://b.hatena.ne.jp/entry/{{ site.base-url | escape }}{{ page.url | escape }}" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="//b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" /></a>
-  <div class="fb-like" data-href="{{ site.base-url }}{{ page.url }}" data-layout="button_count"></div>
+  <div class="fb-like" data-href="{{ site.base-url }}{{ page.url }}" data-layout="button_count" style="height: 20px"></div>
 </div>
